# event_app

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
grafana_data/: Django_overview.json
prometheus_data/: prometheus.yml
src/: Dockerfile  entrypoint.sh
src/core/: celery.py  settings.py  urls.py
src/event/: forms.py  models.py  schemas.py  tasks.py  tests.py  urls.py  views.py
src/event/migrations/: 0001_initial.py
src/event/templates/event/: create_event.html  edit_event.html  get_events.html
src/infrastructure/gateways/api/: api_constants.py  base_async_client.py  error_constants.py  exceptions.py  weather_api_client.py
src/infrastructure/gateways/redis/: redis_client.py
src/infrastructure/utils/: async_login_decorator.py
src/user/: forms.py  tests.py  urls.py  views.py
src/user/templates/registration/: login.html  sign_up.html
src/user/templates/user/: base.html  home.html
