[tool.poetry]
name = "weather-app"
version = "0.1.0"
description = ""
authors = ["kirillovme <54503407+kirillovme@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
crispy-bootstrap5 = "^2023.10"
httpx = "^0.25.2"
pydantic = "^2.5.2"
celery = "^5.3.6"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
flower = "^2.0.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
django-redis = "^5.4.0"
django-prometheus = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
